--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./public/style.css" />
     <title>Amazone clone</title>
+    <script
+      src="https://cdn.jsdelivr.net/npm/jdenticon@3.1.1/dist/jdenticon.min.js"
+      async
+      integrity="sha384-l0/0sn63N3mskDgRYJZA6Mogihu0VY3CusdLMiwpJ9LFPklOARUcOiWEIGGmFELx"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="bg-white w-full">
+      <!-- nav -->
       <div class="header h-16 bg-gray-900 flex items-center">
         <div class="logo logo w-1/5 h-16 ml-10">
-          <img src="./dummy.jpg" alt="logo" class="w-28 h-16" />
+          <img src="./img/dummy.jpg" alt="logo" class="w-28 h-16" />
         </div>
         <input
           class="h-9 w-30 bg-gray-800 border border-gray-500 border-opacity-75 rounded-l-xl px-3 text-white focus:outline-none"
@@ -19,18 +26,181 @@
           type="text"
           placeholder="Search..."
         />
+        <!-- categories -->
         <div
           class="categories h-9 w-30 bg-gray-800 border border-gray-500 border-opacity-75 px-3 text-white flex items-center"
         >
-          SVG
+          Categories
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-4 w-4 ml-2"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M19 9l-7 7-7-7"
+            />
+          </svg>
         </div>
+        <!-- search -->
         <div
-          class="search bg-yellow-500 h-9 w-20 rounded-r-xl flex items-center justify-center text-white"
+          class="search bg-yellow-500 h-9 w-12 rounded-r-xl flex items-center justify-center text-white"
         >
-          Search
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-6 w-6"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
+            />
+          </svg>
+        </div>
+        <!-- right icons -->
+        <div
+          class="icons text-white flex items-center ml-auto mr-8 w-48 h-16 justify-around"
+        >
+          <!-- heart -->
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-4 w-4"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
+            />
+          </svg>
+          <!-- cart cart-icon -->
+          <div
+            class="cart-icon h-10 w-10 bg-yellow-500 flex items-center justify-center rounded-xl text-gray-600"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-4 w-4"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
+              />
+            </svg>
+          </div>
+          <!-- bell-icon -->
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-4 w-4"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"
+            />
+          </svg>
+          <svg
+            class="h-12 w-12 rounded-full"
+            data-jdenticon-value="Mohit"
+          ></svg>
         </div>
       </div>
-      <div class="main"></div>
+
+      <!-- main -->
+      <div class="main h-screen flex">
+
+        <!-- sidebar -->
+        <div
+          class="main-sidebar border-t-2 border-gray-700 w-1/5 bg-gray-900 p-6"
+        >
+          <!-- sidebar sub categories -->
+          <div class="sidebar-categories">
+            <div
+              class="sidebar-main-categories text-yellow-500 cursor-pointer flex font-bold p-2 bg-gray-700 rounded-lg"
+            >
+              <span class="w-8">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-6 w-6"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z"
+                  /></svg></span
+              ><span>Categories</span>
+            </div>
+            <div
+              class="sidebar-main-categories text-white cursor-pointer flex font-bold p-2"
+            >
+              <span class="w-8"></span><span>Echo and Alexa</span>
+            </div>
+            <div
+              class="sidebar-main-categories text-white cursor-pointer flex font-bold p-2"
+            >
+              <span class="w-8"></span><span>Mobiles</span>
+            </div>
+            <div
+              class="sidebar-main-categories text-white cursor-pointer flex font-bold p-2"
+            >
+              <span class="w-8"></span><span>Laptops</span>
+            </div>
+            <div
+              class="sidebar-main-categories text-white cursor-pointer flex font-bold p-2"
+            >
+              <span class="w-8"></span><span>Headphones</span>
+            </div>
+            <div
+              class="sidebar-main-categories text-white cursor-pointer flex font-bold p-2"
+            >
+              <span class="w-8"></span><span>Cloths</span>
+            </div>
+            <div
+              class="sidebar-main-categories text-white cursor-pointer flex font-bold p-2 hover:bg-slate-700 rounded-xl mb-2"
+            >
+              <span class="w-8"><svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+</svg></span><span>Sell on Amazone</span>
+            </div>
+            <div
+              class="sidebar-main-categories text-white cursor-pointer flex font-bold p-2 hover:bg-slate-700 rounded-xl"
+            >
+              <span class="w-8"><svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+</svg>
+</svg></span><span>Help</span>
+            </div>
+          </div>
+        </div>
+
+        <!-- main content -->
+        <div class="main-saction">
+
+        </div>
+      </div>
     </div>
   </body>
 </html>
