--- a/index.html
+++ b/index.html
@@ -1,206 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./public/style.css" />
-    <title>Amazone clone</title>
-    <script
-      src="https://cdn.jsdelivr.net/npm/jdenticon@3.1.1/dist/jdenticon.min.js"
-      async
-      integrity="sha384-l0/0sn63N3mskDgRYJZA6Mogihu0VY3CusdLMiwpJ9LFPklOARUcOiWEIGGmFELx"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <div class="bg-white w-full">
-      <!-- nav -->
-      <div class="header h-16 bg-gray-900 flex items-center">
-        <div class="logo logo w-1/5 h-16 ml-10">
-          <img src="./img/dummy.jpg" alt="logo" class="w-28 h-16" />
-        </div>
-        <input
-          class="h-9 w-30 bg-gray-800 border border-gray-500 border-opacity-75 rounded-l-xl px-3 text-white focus:outline-none"
-          id="search"
-          type="text"
-          placeholder="Search..."
-        />
-        <!-- categories -->
-        <div
-          class="categories h-9 w-30 bg-gray-800 border border-gray-500 border-opacity-75 px-3 text-white flex items-center"
-        >
-          Categories
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-4 w-4 ml-2"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M19 9l-7 7-7-7"
-            />
-          </svg>
-        </div>
-        <!-- search -->
-        <div
-          class="search bg-yellow-500 h-9 w-12 rounded-r-xl flex items-center justify-center text-white"
-        >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-6 w-6"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
-            />
-          </svg>
-        </div>
-        <!-- right icons -->
-        <div
-          class="icons text-white flex items-center ml-auto mr-8 w-48 h-16 justify-around"
-        >
-          <!-- heart -->
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-4 w-4"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
-            />
-          </svg>
-          <!-- cart cart-icon -->
-          <div
-            class="cart-icon h-10 w-10 bg-yellow-500 flex items-center justify-center rounded-xl text-gray-600"
-          >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="h-4 w-4"
-              fill="none"
-              viewBox="0 0 24 24"
-              stroke="currentColor"
-            >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
-              />
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- <link rel="stylesheet" href="./public/style.css" /> -->
+  <title>Amazone clone</title>
+</head>
+
+<body>
+  <div class="bg-white w-full">
+    <!-- nav -->
+    <div class="header h-16 bg-gray-900 flex items-center">
+      <div class="logo w-1/5 h-16 ml-10 mt-6">
+        <span class="text-white font-mono text-4xl w-10">Mr Gohil</span>
+        <!-- <img src="./img/dummy.jpg" alt="logo" class="w-28 h-16" /> -->
+      </div>
+      <input
+        class="h-9 w-30 bg-gray-800 border border-gray-500 border-opacity-75 rounded-l-xl px-3 text-white focus:outline-none"
+        id="search" type="text" placeholder="Search..." />
+      <!-- categories -->
+      <div
+        class="categories h-9 w-30 bg-gray-800 border border-gray-500 border-opacity-75 px-3 text-white flex items-center">
+        Categories
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-2" fill="none" viewBox="0 0 24 24"
+          stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+        </svg>
+      </div>
+      <!-- search -->
+      <div class="search bg-yellow-500 h-9 w-12 rounded-r-xl flex items-center justify-center text-white">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+        </svg>
+      </div>
+      <!-- right icons -->
+      <div class="icons text-white flex items-center ml-auto mr-8 w-48 h-16 justify-around">
+        <!-- heart -->
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" />
+        </svg>
+        <!-- cart cart-icon -->
+        <a href="./cart.html" target="_blank" rel="noopener noreferrer">
+          <div class="cart-icon h-10 w-10 bg-yellow-500 flex items-center justify-center rounded-xl text-gray-600">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24"
+              stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
             </svg>
           </div>
-          <!-- bell-icon -->
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-4 w-4"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke="currentColor"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"
-            />
-          </svg>
-          <svg
-            class="h-12 w-12 rounded-full"
-            data-jdenticon-value="Mohit"
-          ></svg>
+        </a>
+        <!-- bell-icon -->
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
+        </svg>
+        <svg class="h-12 w-12 rounded-full" data-jdenticon-value="Mohit"></svg>
+      </div>
+    </div>
+
+    <!-- main -->
+    <div class="main h-screen flex">
+
+      <!-- sidebar -->
+      <div class="main-sidebar border-t-2 border-gray-700 w-1/5 bg-gray-900 p-6">
+        <!-- sidebar sub categories -->
+        <div class="sidebar-categories">
+          <div class="sidebar-main-categories text-yellow-500 cursor-pointer flex font-bold p-2 bg-gray-700 rounded-lg">
+            <span class="w-8">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z" />
+              </svg></span><span>Categories</span>
+          </div>
+          <div class="sidebar-main-categories text-white cursor-pointer flex font-bold p-2">
+            <span class="w-8"></span><span>Echo and Alexa</span>
+          </div>
+          <div class="sidebar-main-categories text-white cursor-pointer flex font-bold p-2">
+            <span class="w-8"></span><span>Mobiles</span>
+          </div>
+          <div class="sidebar-main-categories text-white cursor-pointer flex font-bold p-2">
+            <span class="w-8"></span><span>Laptops</span>
+          </div>
+          <div class="sidebar-main-categories text-white cursor-pointer flex font-bold p-2">
+            <span class="w-8"></span><span>Headphones</span>
+          </div>
+          <div class="sidebar-main-categories text-white cursor-pointer flex font-bold p-2">
+            <span class="w-8"></span><span>Cloths</span>
+          </div>
+          <div
+            class="sidebar-main-categories text-white cursor-pointer flex font-bold p-2 hover:bg-slate-700 rounded-xl mb-2">
+            <span class="w-8"><svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+              </svg></span><span>Sell on Amazone</span>
+          </div>
+          <div
+            class="sidebar-main-categories text-white cursor-pointer flex font-bold p-2 hover:bg-slate-700 rounded-xl">
+            <span class="w-8"><svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+              </svg>
+              </svg></span><span>Help</span>
+          </div>
         </div>
       </div>
 
-      <!-- main -->
-      <div class="main h-screen flex">
+      <!-- main content -->
+      <div class="main-saction flex-1 p-2 bg-gray-100">
+        <div class="banner bg-slate-600 w-full h-44 bg-cover bg-center rounded-md flex items-end">
+          <div class="button bg-white h-10 w-36 rounded-full flex justify-center items-center ml-4 cursor-pointer m-4">
+            <h4 class="text-bold text-gray-500">Browse product</h4>
+          </div>
+        </div>
 
-        <!-- sidebar -->
-        <div
-          class="main-sidebar border-t-2 border-gray-700 w-1/5 bg-gray-900 p-6"
-        >
-          <!-- sidebar sub categories -->
-          <div class="sidebar-categories">
-            <div
-              class="sidebar-main-categories text-yellow-500 cursor-pointer flex font-bold p-2 bg-gray-700 rounded-lg"
-            >
-              <span class="w-8">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="h-6 w-6"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z"
-                  /></svg></span
-              ><span>Categories</span>
+        <!-- categories -->
+        <div class="categories mt-5">
+          <h1 class="popular-categories font-bold text-gray-700 text-2xl flex items-center">Popular Categories</h1>
+          <!-- categories-list -->
+          <div class="categories-list mt-5 flex">
+            <div class="icon-desktop h-20 w-20 bg-white rounded-xl flex justify-center items-center ml-6">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-gray-500" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+              </svg>
             </div>
-            <div
-              class="sidebar-main-categories text-white cursor-pointer flex font-bold p-2"
-            >
-              <span class="w-8"></span><span>Echo and Alexa</span>
+            <div class="icon-gift h-20 w-20 bg-white rounded-xl flex justify-center items-center ml-6">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-gray-500" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M12 8v13m0-13V6a2 2 0 112 2h-2zm0 0V5.5A2.5 2.5 0 109.5 8H12zm-7 4h14M5 12a2 2 0 110-4h14a2 2 0 110 4M5 12v7a2 2 0 002 2h10a2 2 0 002-2v-7" />
+              </svg>
             </div>
-            <div
-              class="sidebar-main-categories text-white cursor-pointer flex font-bold p-2"
-            >
-              <span class="w-8"></span><span>Mobiles</span>
+            <div class="icon-mobile h-20 w-20 bg-white rounded-xl flex justify-center items-center ml-6">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-gray-500" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z" />
+              </svg>
             </div>
-            <div
-              class="sidebar-main-categories text-white cursor-pointer flex font-bold p-2"
-            >
-              <span class="w-8"></span><span>Laptops</span>
+            <div class="icon-book h-20 w-20 bg-white rounded-xl flex justify-center items-center ml-6">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-gray-500" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" />
+              </svg>
             </div>
-            <div
-              class="sidebar-main-categories text-white cursor-pointer flex font-bold p-2"
-            >
-              <span class="w-8"></span><span>Headphones</span>
-            </div>
-            <div
-              class="sidebar-main-categories text-white cursor-pointer flex font-bold p-2"
-            >
-              <span class="w-8"></span><span>Cloths</span>
-            </div>
-            <div
-              class="sidebar-main-categories text-white cursor-pointer flex font-bold p-2 hover:bg-slate-700 rounded-xl mb-2"
-            >
-              <span class="w-8"><svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-</svg></span><span>Sell on Amazone</span>
-            </div>
-            <div
-              class="sidebar-main-categories text-white cursor-pointer flex font-bold p-2 hover:bg-slate-700 rounded-xl"
-            >
-              <span class="w-8"><svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-</svg>
-</svg></span><span>Help</span>
+            <div class="icon-camera h-20 w-20 bg-white rounded-xl flex justify-center items-center ml-6">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-gray-500" fill="none" viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M3 9a2 2 0 012-2h.93a2 2 0 001.664-.89l.812-1.22A2 2 0 0110.07 4h3.86a2 2 0 011.664.89l.812 1.22A2 2 0 0018.07 7H19a2 2 0 012 2v9a2 2 0 01-2 2H5a2 2 0 01-2-2V9z" />
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M15 13a3 3 0 11-6 0 3 3 0 016 0z" />
+              </svg>
             </div>
           </div>
         </div>
 
-        <!-- main content -->
-        <div class="main-saction">
-
+        <!-- products -->
+        <div class="hot-deals mt-5">
+          <h1 class="text-2xl font-bold text-gray-700 mb-5">Hot deals</h1>
+          <div class="main-saction-products">
+            <div class="main-products">
+              <div class="product-image w-48 h-52 bg-white rounded-lg p-4">
+                <img class="w-full h-full object-contain" src="./img/dummy.jpg">
+              </div>
+              <div class="product-name text-gray-700 font-bold mt-2 text-sm">
+                Android Mobile
+              </div>
+              <div class="product-make text-green-700 font-bold">
+                Google
+              </div>
+              <div class="product-rating text-yellow-300 font-bold my-1">
+                * * * * *
+              </div>
+              <div class="product-price font-bold text-gray-700 text-lg">
+                16k
+              </div>
+            </div>
+          </div>
         </div>
+
       </div>
     </div>
-  </body>
+  </div>
+</body>
+<script src="https://cdn.tailwindcss.com"></script>
+<script src="https://cdn.jsdelivr.net/npm/jdenticon@3.1.1/dist/jdenticon.min.js" async
+  integrity="sha384-l0/0sn63N3mskDgRYJZA6Mogihu0VY3CusdLMiwpJ9LFPklOARUcOiWEIGGmFELx" crossorigin="anonymous"></script>
+
 </html>
