--- a/cart.html
+++ b/cart.html
@@ -5,11 +5,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./public/style.css" />
+    <!-- <link rel="stylesheet" href="./public/style.css" /> -->
     <title>Amazone clone</title>
-    <script src="https://cdn.jsdelivr.net/npm/jdenticon@3.1.1/dist/jdenticon.min.js" async
-        integrity="sha384-l0/0sn63N3mskDgRYJZA6Mogihu0VY3CusdLMiwpJ9LFPklOARUcOiWEIGGmFELx"
-        crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -17,7 +15,8 @@
         <!-- nav -->
         <div class="header h-16 bg-gray-900 flex items-center">
             <div class="logo w-1/5 h-16 ml-10 mt-6">
-                <span class="text-white font-mono text-4xl w-10">Mr Gohil</span>
+                <a href="./index.html">
+                    <span class="text-white font-mono text-4xl w-10">Mr Gohil</span></a>
                 <!-- <img src="./img/dummy.jpg" alt="logo" class="w-28 h-16" /> -->
             </div>
             <input
@@ -120,6 +119,7 @@
 
             <!-- main-cart-page -->
             <div class="main-saction flex-1 p-6 bg-white">
+                <!-- title -->
                 <h1 class="text-gray-400 text-3xl font-bold mb-6">Shopping cart</h1>
                 <div class="tabel-titles font-bold text-gray-400 flex">
                     <h2 class="flex-grow">Product</h2>
@@ -127,8 +127,9 @@
                     <h2 class="w-48">Total cost</h2>
                     <span class="w-10"></span>
                 </div>
+                <!-- cart items -->
                 <div class="cart-items mt-5">
-                    <!-- cart items -->
+
                     <!-- demo1 -->
                     <div class="cart-item flex items-center pb-4 border-b">
                         <div class="cart-item-image w-48 h-24 bg-white p-4 rounded-lg">
@@ -218,11 +219,25 @@
                         </div>
                     </div>
                 </div>
+                <!-- compleat order -->
+                <div class="complete-order flex justify-end mt-10">
+                    <div class="total-cost mr-7">
+                        <h2 class="text-gray-400">Total cost</h2>
+                        <div class="total-cost-number text-3xl font-bold text-gray-600">32,000.00</div>
+                    </div>
+                    <div
+                        class="complete-order-button w-56 flex items-center justify-center bg-yellow-500 rounded text-white cursor-pointer hover:bg-yellow-600">
+                        Complete order
+                    </div>
+                </div>
             </div>
-
-
         </div>
     </div>
 </body>
+<script src="https://cdn.tailwindcss.com"></script>
+<script src="https://cdn.jsdelivr.net/npm/jdenticon@3.1.1/dist/jdenticon.min.js" async
+    integrity="sha384-l0/0sn63N3mskDgRYJZA6Mogihu0VY3CusdLMiwpJ9LFPklOARUcOiWEIGGmFELx"
+    crossorigin="anonymous"></script>
+<script src="./firebase.js"></script>
 
 </html>
